packages/style-macro/tests/fixtures/reject/spread.input.tsx
import { $style } from '@vapor-ui/core';

const base = {};
export const C = () => <div className={$style({ ...base, padding: '$400' })} />;
